# ProducerConsumer_ETL

./: CMakeLists.txt  README.md  Task.md  compile.sh
include/: packet.hpp  packetbuffer.hpp  receiver.hpp  transmitter.hpp
source/: main.cpp  packetbuffer.cpp  receiver.cpp  transmitter.cpp
